--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - '5010:5000'  # Host:Container
     env_file:
-      - .env
+      - ./backend/.env
     networks:
       - assetrax-network
 
@@ -17,7 +17,7 @@ services:
     container_name: assetrax-mongo
     restart: always
     env_file:
-      - .env
+      - ./backend/.env
     volumes:
       - assetrax-data:/data/db
     ports:
